# ml-project

./: README.md  app.py  app_pt.py  docker-compose.yml  pyproject.toml  requests.txt  testes.ipynb
ml_project/: testes.ipynb
ml_project/eng_app/: Dockerfile  app.py  pizzas.csv  requirements.txt
ml_project/pt_app/: Dockerfile  app_pt.py
