[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["clarcolaco <clarissa.colaco@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
